# lumen-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
crates/lumen-cli/: Cargo.toml
crates/lumen-cli/src/: cli.rs  lib.rs  main.rs
crates/lumen-cli/tests/: programs.rs
crates/lumen-core/: Cargo.toml
crates/lumen-core/benches/: pipeline.rs
crates/lumen-core/src/: ast.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  token.rs  value.rs
docs/: architecture.md  language.md
docs/adr/: 0001-tree-walking-interpreter.md  0002-recursive-descent-parsing.md  0003-lexical-scoping-closures.md  0004-scope-boundaries.md
examples/: closures.lum  fib.lum  fizzbuzz.lum
scripts/: build.sh  demo.sh
