[workspace]
resolver = "3"
members = [
    "crates/lumen-core",
    "crates/lumen-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Joseph Edwards <josephleonedwards@gmail.com>"]
repository = "https://github.com/leisurelyleon/lumen-lang"
description = "A tree-walking interpreter for Lumen, a small dynamically-typed language."

[workspace.dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
