[package]
name = "lumen-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The Lumen language: lexer, recursive-descent parser, and tree-walking interpreter (no external crates)."

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "pipeline"
harness = false
